Fix scrollbar

--- a/source/assets/css/site.css.scss
+++ b/source/assets/css/site.css.scss
@@ -967,6 +967,7 @@ footer {
   p {
     font-weight: 300;
     font-size: 1em;
+    line-height: 1.2;
     margin-top: 0;
     padding: 20px;
     display: flex;
